# rig

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  update.sh
.claude/skills/rig-vector-store/: SKILL.md
.continue/rules/: rig-provider.md
.cursor/rules/: rig-provider.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
.windsurf/rules/: rig-provider.md
crates/embeddings/rig-fastembed/: Cargo.toml
crates/providers/rig-bedrock/: Cargo.toml
crates/providers/rig-gemini-grpc/: Cargo.toml
crates/providers/rig-vertexai/: Cargo.toml
crates/rig/: Cargo.toml  README.md
crates/rig-bedrock/: CHANGELOG.md  Cargo.toml
crates/rig-bedrock/examples/: agent_with_bedrock.rs  streaming_with_bedrock_and_tools.rs
crates/rig-bedrock/src/: completion.rs  streaming.rs
crates/rig-core/: CHANGELOG.md  Cargo.toml  README.md
crates/rig-core/examples/: agent.rs  agent_autonomous.rs  agent_orchestrator.rs  agent_parallelization.rs  agent_stream_chat.rs  agent_with_agent_tool.rs  agent_with_context.rs  agent_with_default_max_turns.rs  agent_with_echochambers.rs  agent_with_loaders.rs  agent_with_tools.rs  agent_with_tools_otel.rs  calculator_chatbot.rs  chain.rs  complex_agentic_loop_claude.rs  custom_vector_store.rs  gemini_extractor_with_rag.rs  gemini_video_understanding.rs  multi_agent.rs  multi_extract.rs  multi_turn_agent.rs  pdf_agent.rs  rag.rs  rag_dynamic_tools.rs  rag_ollama.rs  reasoning_loop.rs  request_hook.rs  rmcp.rs  vector_search.rs
crates/rig-core/src/: extractor.rs  lib.rs  model_event.rs  prelude.rs  streaming.rs
crates/rig-derive/: CHANGELOG.md  Cargo.toml
crates/rig-derive/src/: client.rs  lib.rs  paths.rs
crates/rig-derive/tests/: calculator.rs  custom_name.rs  visibility.rs
crates/rig-fastembed/: CHANGELOG.md
crates/rig-gemini-grpc/: CHANGELOG.md  Cargo.toml
crates/rig-gemini-grpc/src/: completion.rs  streaming.rs
crates/rig-helixdb/: CHANGELOG.md
crates/rig-lancedb/: CHANGELOG.md
crates/rig-memory/: CHANGELOG.md
crates/rig-milvus/: CHANGELOG.md
crates/rig-mongodb/: CHANGELOG.md
crates/rig-neo4j/: CHANGELOG.md
crates/rig-postgres/: CHANGELOG.md
crates/rig-qdrant/: CHANGELOG.md
crates/rig-s3vectors/: CHANGELOG.md
crates/rig-scylladb/: CHANGELOG.md
crates/rig-sqlite/: CHANGELOG.md  Cargo.toml
crates/rig-sqlite/tests/: ann_conformance.rs
crates/rig-surrealdb/: CHANGELOG.md
crates/rig-vector-testkit/: Cargo.toml
crates/rig-vector-testkit/fixtures/ann/: README.md  ann_benchmarks_random_xs_20_angular_cosine.json  ann_benchmarks_random_xs_20_angular_l1.json  ann_benchmarks_random_xs_20_angular_l2.json  benchmark_derived_ann_random_xs_20_angular_cosine.json  benchmark_derived_ann_random_xs_20_angular_l1.json  benchmark_derived_ann_random_xs_20_angular_l2.json  benchmark_derived_vibe_glove_200_cosine.json  synthetic_cosine_small.json  synthetic_l1_small.json  synthetic_l2_small.json  vibe_yi_128_ip_cosine.json  vibe_yi_128_ip_l1.json  vibe_yi_128_ip_l2.json
crates/rig-vector-testkit/src/: lib.rs
crates/rig-vectorize/: CHANGELOG.md
crates/rig-vertexai/: CHANGELOG.md
crates/rig-vertexai/examples/: tool_vertexai.rs
crates/rig-vertexai/src/: completion.rs
crates/vector-stores/rig-helixdb/: Cargo.toml
crates/vector-stores/rig-lancedb/: Cargo.toml  README.md
crates/vector-stores/rig-milvus/: Cargo.toml
crates/vector-stores/rig-mongodb/: Cargo.toml  README.md
crates/vector-stores/rig-neo4j/: Cargo.toml  README.md
crates/vector-stores/rig-postgres/: Cargo.toml  README.md
crates/vector-stores/rig-qdrant/: Cargo.toml  README.md
crates/vector-stores/rig-s3vectors/: Cargo.toml
crates/vector-stores/rig-scylladb/: Cargo.toml
crates/vector-stores/rig-sqlite/: Cargo.toml  README.md
crates/vector-stores/rig-surrealdb/: Cargo.toml
crates/vector-stores/rig-vectorize/: Cargo.toml  README.md
examples/: agent_stream_chat.rs  agent_with_agent_tool.rs  agent_with_default_max_turns.rs  agent_with_echochambers.rs  agent_with_tools.rs  agent_with_tools_otel.rs  calculator_chatbot.rs  complex_agentic_loop_claude.rs  manual_tool_calls.rs  multi_agent.rs  multi_turn_agent.rs  multi_turn_agent_extended.rs  openai_streaming_with_tools_otel.rs  rag_dynamic_tools.rs  rag_dynamic_tools_multi_turn.rs  reasoning_loop.rs
rig-integrations/rig-bedrock/: CHANGELOG.md
rig-integrations/rig-bedrock/examples/: agent_with_bedrock.rs  embedding_with_bedrock.rs  extractor_with_bedrock.rs  image_generator.rs  rag_with_bedrock.rs
rig-integrations/rig-bedrock/src/: client.rs  completion.rs  embedding.rs  image.rs  lib.rs  streaming.rs
rig-integrations/rig-fastembed/: CHANGELOG.md
rig-integrations/rig-fastembed/examples/: vector_search_fastembed_local.rs
rig-integrations/rig-fastembed/src/: lib.rs
rig-integrations/rig-gemini-grpc/: CHANGELOG.md  build.rs
rig-integrations/rig-gemini-grpc/examples/: gemini_grpc_agent.rs
rig-integrations/rig-gemini-grpc/src/: client.rs  completion.rs  embedding.rs  lib.rs  streaming.rs
rig-integrations/rig-helixdb/: CHANGELOG.md
rig-integrations/rig-lancedb/: CHANGELOG.md
rig-integrations/rig-milvus/: CHANGELOG.md
rig-integrations/rig-mongodb/: CHANGELOG.md
rig-integrations/rig-neo4j/: CHANGELOG.md
rig-integrations/rig-postgres/: CHANGELOG.md  README.md
rig-integrations/rig-qdrant/: CHANGELOG.md
rig-integrations/rig-s3vectors/: CHANGELOG.md
rig-integrations/rig-scylladb/: CHANGELOG.md  README.md
rig-integrations/rig-sqlite/: CHANGELOG.md
rig-integrations/rig-surrealdb/: CHANGELOG.md
rig-integrations/rig-vectorize/: CHANGELOG.md
rig-integrations/rig-vertexai/: CHANGELOG.md
rig/rig/: Cargo.toml
rig/rig-core/: CHANGELOG.md  Cargo.toml  README.md
rig/rig-derive/: CHANGELOG.md  Cargo.toml
rig/rig-fastembed/: Cargo.toml
rig/rig-models/: Cargo.toml
rig/rig-models-generator/: Cargo.toml
rig/rig-models-generator/src/: main.rs
rig/rig-vectorize/: README.md
rig/rig/src/: lib.rs
skills/rig/: SKILL.md
tests/common/: reasoning.rs  support.rs
tests/core/: prompt_response_messages.rs  reasoning_stream_stats.rs
(+606 files in other folders)
