[package]
name = "rig-vector-testkit"
version = "0.1.0"
edition = { workspace = true }
description = "Shared vector-store conformance fixtures and assertions for Rig"
license = "MIT"
publish = false

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
rig-core = { path = "../rig-core", version = "0.37.0", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
