[package]
name = "rig"
version = "0.36.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "Umbrella crate for Rig core APIs, providers, and integrations."
repository = "https://github.com/0xPlaygrounds/rig"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
rig-core = { path = "../rig-core", version = "0.36.0", default-features = false }
rig-bedrock = { path = "../providers/rig-bedrock", version = "0.4.5", optional = true }
rig-fastembed = { path = "../embeddings/rig-fastembed", version = "0.4.0", optional = true }
rig-gemini-grpc = { path = "../providers/rig-gemini-grpc", version = "0.2.5", optional = true }
rig-helixdb = { path = "../vector-stores/rig-helixdb", version = "0.2.5", optional = true }
rig-lancedb = { path = "../vector-stores/rig-lancedb", version = "0.4.5", optional = true }
rig-milvus = { path = "../vector-stores/rig-milvus", version = "0.2.5", optional = true }
rig-mongodb = { path = "../vector-stores/rig-mongodb", version = "0.4.5", optional = true }
rig-neo4j = { path = "../vector-stores/rig-neo4j", version = "0.5.5", optional = true }
rig-postgres = { path = "../vector-stores/rig-postgres", version = "0.2.5", optional = true }
rig-qdrant = { path = "../vector-stores/rig-qdrant", version = "0.2.5", optional = true }
rig-s3vectors = { path = "../vector-stores/rig-s3vectors", version = "0.2.5", optional = true }
rig-scylladb = { path = "../vector-stores/rig-scylladb", version = "0.2.5", optional = true }
rig-sqlite = { path = "../vector-stores/rig-sqlite", version = "0.2.5", optional = true }
rig-surrealdb = { path = "../vector-stores/rig-surrealdb", version = "0.2.5", optional = true }
rig-vectorize = { path = "../vector-stores/rig-vectorize", version = "0.2.5", optional = true }
rig-vertexai = { path = "../providers/rig-vertexai", version = "0.3.5", optional = true }

[features]
default = ["reqwest", "rustls"]
all = ["core-all", "all-integrations"]
all-integrations = [
    "bedrock",
    "fastembed",
    "gemini-grpc",
    "helixdb",
    "lancedb",
    "milvus",
    "mongodb",
    "neo4j",
    "postgres",
    "qdrant",
    "s3vectors",
    "scylladb",
    "sqlite",
    "surrealdb",
    "vectorize",
    "vertexai",
]
audio = ["rig-core/audio"]
core-all = ["rig-core/all"]
derive = ["rig-core/derive"]
discord-bot = ["rig-core/discord-bot"]
epub = ["rig-core/epub"]
experimental = ["rig-core/experimental"]
image = ["rig-core/image"]
native-tls = ["rig-core/native-tls"]
pdf = ["rig-core/pdf"]
rayon = ["rig-core/rayon"]
reqwest = ["rig-core/reqwest"]
reqwest-middleware = ["rig-core/reqwest-middleware"]
reqwest-middleware-native-tls = ["rig-core/reqwest-middleware-native-tls"]
reqwest-middleware-rustls = ["rig-core/reqwest-middleware-rustls"]
rmcp = ["rig-core/rmcp"]
rustls = ["rig-core/rustls"]
socks = ["rig-core/socks"]
wasm = ["rig-core/wasm"]
websocket = ["rig-core/websocket"]
websocket-native-tls = ["rig-core/websocket-native-tls"]
websocket-rustls = ["rig-core/websocket-rustls"]

bedrock = ["dep:rig-bedrock"]
fastembed = ["dep:rig-fastembed"]
gemini-grpc = ["dep:rig-gemini-grpc"]
helixdb = ["dep:rig-helixdb"]
lancedb = ["dep:rig-lancedb"]
milvus = ["dep:rig-milvus"]
mongodb = ["dep:rig-mongodb"]
neo4j = ["dep:rig-neo4j"]
postgres = ["dep:rig-postgres"]
qdrant = ["dep:rig-qdrant"]
s3vectors = ["dep:rig-s3vectors"]
scylladb = ["dep:rig-scylladb"]
sqlite = ["dep:rig-sqlite"]
surrealdb = ["dep:rig-surrealdb"]
vectorize = ["dep:rig-vectorize"]
vertexai = ["dep:rig-vertexai"]
