[package]
name = "rig-models-generator"
version = "0.1.0"
edition = { workspace = true }
license = "MIT"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rig-models = { path = "../rig-models" }
rig = { package = "rig-core", path = "../rig-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

